# stereo_glass_check

./: .gitignore  CMakeLists.txt
aslam_cameras_april/: CMakeLists.txt
aslam_cameras_april/include/aslam/cameras/: GridCalibrationTargetAprilgrid.hpp  GridCalibrationTargetBase.hpp
aslam_cameras_april/src/: GridCalibrationTargetAprilgrid.cpp  GridCalibrationTargetBase.cpp
dataset/inmo_t1/: stereo_rectify.yml
ethz_apriltag2/: CMakeLists.txt
include/: estimate_stereo_pose.hpp
src/: estimate_stereo_pose.cpp  main.cpp
unitTests/: test_display_rectangle.cpp  test_stereo_alignment.cpp
